--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,11 @@ spring.jpa.hibernate.ddl-auto=update
 server.servlet.context-path=/users
 server.port=8081
 spring.main.allow-circular-references=true
+
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=mahdilaith380@gmail.com
+spring.mail.password=unfhmqjnstqngqca
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
